# prism-suite-pigment

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  RESEARCH.md  SUITE.md
.github/workflows/: ci.yml
crates/pigment-app/: Cargo.toml
crates/pigment-app/src/: app.rs  canvas.rs  contour_import.rs  icons.rs  main.rs  path.rs  theme.rs
crates/pigment-app/src/app/: adjustments.rs  camera_raw.rs  comps.rs  edit.rs  gradient.rs  io.rs  mod.rs  pattern.rs  retouch.rs  smart_filter.rs  state.rs  view.rs
crates/pigment-app/src/canvas/: brush.rs  channels.rs  clone.rs  command.rs  compositor.rs  filter_math.rs  gpu_tests.rs  layers.rs  mod.rs  paint.rs  selection.rs
crates/pigment-app/src/shaders/: canvas.wgsl  clone.wgsl  composite.wgsl  dab.wgsl  display.wgsl  filter.wgsl  selection.wgsl
crates/pigment-core/: Cargo.toml
crates/pigment-core/src/: adjust.rs  blend.rs  color.rs  document.rs  histogram.rs  layer.rs  lib.rs  raster.rs  shape.rs  tile.rs
crates/pigment-io/: Cargo.toml
crates/pigment-io/src/: document_file.rs  export.rs  exr_io.rs  lib.rs  psd_import.rs  text.rs
