[workspace]
resolver = "2"
members = ["crates/pigment-app"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KwaminaWhyte/prism-suite-pigment"

[workspace.dependencies]
# Shared third-party deps pinned once (verify with `cargo add` at build).
glam = "0.29"
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

# Shared suite crates (promoted to prism/crates).
prism-color = { path = "../prism-suite-prism/crates/prism-color" }
prism-core = { path = "../prism-suite-prism/crates/prism-core" }
prism-io = { path = "../prism-suite-prism/crates/prism-io" }

# Lints applied across the workspace (crates opt in via `[lints] workspace = true`).
# These are deliberate: per-channel index loops read clearer than iterators, the
# GPU helpers genuinely need many args, and egui 0.34 deprecations are mid-cycle.
[workspace.lints.clippy]
needless_range_loop = "allow"
too_many_arguments = "allow"
field_reassign_with_default = "allow"

[workspace.lints.rust]
deprecated = "allow"

[profile.dev]
opt-level = 1          # keep the app usable while iterating

[profile.dev.package."*"]
opt-level = 3          # but build deps (wgpu/image) optimized
